Get rid of deprecated URL handling